--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>This is Munir Dev</title>
+		<title>MunirDev</title>
 		<meta charset="utf-8">
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-		<link href="stylesheet.css" rel="stylesheet" type="text/css">
+		  	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+			  <link href="https://fonts.googleapis.com/css2?family=Megrim&family=Pompiere&display=swap" rel="stylesheet">
+	      <link href="style.css" rel="stylesheet" type="text/css">
 	</head>
-	
+
 	<body>
 		<!-- header start -->
 		<div id="header" class="section">
@@ -14,17 +16,17 @@
 			<p>Munir Ahmad</p>
 		</div>
 		<!-- header end -->
-		
+
 		<!-- About Me section start -->
 		<div class="section">
 			<h1><span>About Me</span></h1>
 			<p>
-				Hey! I'm <strong>Munir</strong>. Coding has changed my world. It's not just about apps. Learning to code gave me <i>problem-solving skills</i> and a way to communicate with others on a technical level. I can also develop websites and use my coding skills to get a better job. And I learned it all at <strong>www.th3frontier.com (HTML, CSS,  JS, JQUERY, BOOTSTRAP, WORDPRESS, PHP, MYSQl, APIs, JAVA, KOTLIN, ANDROID, LINUX KURDI, NETWORKING )</strong> where they build your self-esteem and keep you motivated. Join me in this rewarding journey. You'll have fun, get help, and learn along the way!
+				Hey! I'm <strong>Munir</strong>. Coding has changed my world. It's not just about apps. Learning to code gave me problem-solving skills and a way to communicate with others on a technical level. I can also develop websites and use my coding skills to get a better job. And I learned it all at <a href="www.th3frontier.com">www.th3frontier.com</a>(HTML, CSS,  JS, JQUERY, BOOTSTRAP, WORDPRESS, PHP, MYSQl, APIs, JAVA, KOTLIN, ANDROID, LINUX KURDI, NETWORKING )</strong> where they build your self-esteem and keep you motivated. Join me in this rewarding journey. You'll have fun, get help, and learn along the way!
 			</p>
 			<p class="quote">"Nice Day For Everyone"</p>
 		</div>
 		<!-- About Me section end -->
-		
+
 		<!-- My Schedule section start -->
 		<div class="section">
 			<h1><span>My Coding Schedule</span></h1>
@@ -80,8 +82,8 @@
 			</table>
 		</div>
 		<!-- My Schedule section end -->
-		
-		
+
+
 		<!-- My Skills section start -->
 		<div class="section">
 			<h1><span>My Skills</span></h1>
@@ -101,19 +103,19 @@
 			</ul>
 		</div>
 		<!-- My Skills section end -->
-		
-		
+
+
 		 <!-- Media section start -->
 		<div class="section">
 			<h1><span>My Media</span></h1>
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/SkGKw1WrQ2o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 		<!-- Media section end -->
-		
+
 		<!-- Form section start -->
 	   <div class="section">
 			<h1><span>Contact Me</span></h1>
-			
+
 			<svg class="face" height="100" width="100">
 				<circle cx="50" cy="50" r="50" fill="#FDD835"/>
 				<circle cx="30" cy="30" r="10" fill="#FFFFFF"/>
@@ -122,7 +124,7 @@
 				<circle cx="70" cy="30" r="5" fill="#000000"/>
 				<path d="M 30 70 q 20 20 40 0" stroke="#FFFFFF" stroke-width="5" fill="none" />
 			</svg>
-				 
+
 			<form>
 				<input name="name" placeholder="Name" type="text" required /><br/>
 				<input name="email" placeholder="Email" type="email" required /><br/>
@@ -131,10 +133,11 @@
 			</form>
 		</div>
 		<!-- Form section end -->
-		
+
 		<!-- Contacts section start -->
 		<div class="section" id="contacts">
 			<h1><span>Follow Me</span></h1>
+
 			<div>
 				<a href="http://www.th3frontier.com/" target="_blank">
 					<img alt="eng-munir" src="Images/words.png" />
@@ -151,10 +154,7 @@
 			</div>
 		</div>
 		<!-- Contacts section end -->
-		
-		<div class="copyright">
-			&copy; 2019 My WebSite. All rights reserved.
-		</div>
-		
+		<p style="font-family: 'Megrim', cursive;" class="copyright">
+			&copy; 2019 My WebSite. All rights reserved.</p>
 	</body>
 </html>
