--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		  	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 			  <link href="https://fonts.googleapis.com/css2?family=Megrim&family=Pompiere&display=swap" rel="stylesheet">
-	      <link href="style.css" rel="stylesheet" type="text/css">
+	      <link href="stylesheet.css" rel="stylesheet" type="text/css">
 	</head>
 
 	<body>
