update link website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="section">
 			<h1><span>About Me</span></h1>
 			<p>
-				Hey! I'm <strong>Munir</strong>. Coding has changed my world. It's not just about apps. Learning to code gave me problem-solving skills and a way to communicate with others on a technical level. I can also develop websites and use my coding skills to get a better job. And I learned it all at <a href="www.th3frontier.com">www.th3frontier.com</a>(HTML, CSS,  JS, JQUERY, BOOTSTRAP, WORDPRESS, PHP, MYSQl, APIs, JAVA, KOTLIN, ANDROID, LINUX KURDI, NETWORKING )</strong> where they build your self-esteem and keep you motivated. Join me in this rewarding journey. You'll have fun, get help, and learn along the way!
+				Hey! I'm <strong>Munir</strong>. Coding has changed my world. It's not just about apps. Learning to code gave me problem-solving skills and a way to communicate with others on a technical level. I can also develop websites and use my coding skills to get a better job. And I learned it all at <a href="https://www.th3frontier.com/">www.th3frontier.com</a>(HTML, CSS,  JS, JQUERY, BOOTSTRAP, WORDPRESS, PHP, MYSQl, APIs, JAVA, KOTLIN, ANDROID, LINUX KURDI, NETWORKING )</strong> where they build your self-esteem and keep you motivated. Join me in this rewarding journey. You'll have fun, get help, and learn along the way!
 			</p>
 			<p class="quote">"Nice Day For Everyone"</p>
 		</div>
